@@ -10,13 +10,14 @@
 
 
 Version 4.2.2
- - Changed: Various core files in preparation for GEDFact_assistant/MEDIA/ module (windmillway
+ - Added [ 1209782 ] Top Down pedigree tree (wooc)
+ - Changed: Various core files in preparation for GEDFact_assistant/MEDIA/ module (windmillway)
  - Changed: Placed restriction on GEDFact_assistant/MEDIA/ to be PGV_USER_GEDCOM_ADMIN only (windmillway)
  - Fixed: [ 2786280 ] 4.2.1 search results in families have duplication (fisharebest)
  - Fixed: [ 2790245 ] link error in standard theme (fisharebest)
  - Changed - Various core files in preparation for GEDFact_assistant module (windmillway)
  - Changed Move various media "thumbnails" to the "index/media" subdirectory (canajun2eh)
- - Fixed Text media items not being displayed properly with Lightbox. (windmillway) 
+ - Fixed Text media items not being displayed properly with Lightbox. (windmillway)
  - Fixed [ 2789308 ] ERROR 8: Constant PGV_GOOGLE_ANALYTICS already defined (fisharebest)
  - Fixed Errors on Album page and Reorder Media page highlighted by introduction of PDO parameters (windmillway)
  - Added Comment field to "Banned by IP" and "Search engine by IP" lists on Manage Servers page (canajun2eh)
